Update presenter title from Senior Lecturer to Assistant Professor

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         <div class="presenter">
           <div class="presenter-name">Sarah Keren</div>
           <div class="presenter-affil">
-            Senior Lecturer, Faculty of Computer Science, Technion – Israel Institute of Technology
+            Assistant Professor, Faculty of Computer Science, Technion – Israel Institute of Technology
           </div>
           <div class="presenter-email">
             Contact: <a href="mailto:sarahk@technion.ac.il">sarahk@technion.ac.il</a>
