--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     header {
       background: white;
       border-bottom: 1px solid #dee2e6;
-      padding: 1.5rem 1.5rem 1rem;
+      padding: 1.1rem 1.5rem 0.4rem;
       position: sticky;
       top: 0;
       z-index: 10;
@@ -38,20 +38,15 @@
       color: var(--accent);
     }
     header p {
-      margin: 0.2rem 0 0;
+      margin: 0.15rem 0 0;
       color: var(--muted);
       font-size: 0.95rem;
-    }
-    main {
-      max-width: 960px;
-      margin: 1.5rem auto 3rem;
-      padding: 0 1rem;
     }
     .badge-row {
       display: flex;
       flex-wrap: wrap;
       gap: 0.4rem;
-      margin: 0.8rem 0 0;
+      margin: 0.6rem 0 0.4rem;
     }
     .badge {
       font-size: 0.8rem;
@@ -61,6 +56,32 @@
       background: white;
       color: var(--muted);
       white-space: nowrap;
+    }
+    /* Simple top nav */
+    nav {
+      margin-top: 0.4rem;
+      border-top: 1px solid #f1f3f5;
+      padding-top: 0.4rem;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.75rem;
+      font-size: 0.9rem;
+    }
+    nav a {
+      color: var(--muted);
+      text-decoration: none;
+      padding-bottom: 0.15rem;
+      border-bottom: 2px solid transparent;
+    }
+    nav a:hover {
+      color: var(--accent);
+      border-bottom-color: var(--accent-light);
+    }
+
+    main {
+      max-width: 960px;
+      margin: 1.5rem auto 3rem;
+      padding: 0 1rem;
     }
     .hero {
       background: white;
@@ -158,6 +179,21 @@
       font-weight: 500;
       margin: 0.1rem;
     }
+    .btn-primary {
+      display: inline-block;
+      margin-top: 0.6rem;
+      padding: 0.45rem 0.9rem;
+      border-radius: 999px;
+      background: var(--accent);
+      color: white;
+      font-size: 0.9rem;
+      font-weight: 500;
+      text-decoration: none;
+    }
+    .btn-primary:hover {
+      background: #0a6373;
+      text-decoration: none;
+    }
     footer {
       text-align: center;
       font-size: 0.8rem;
@@ -185,10 +221,20 @@
       <span class="badge">January 20, 2026</span>
       <span class="badge">Singapore EXPO</span>
     </div>
+
+    <!-- Simple "tabs" as top nav -->
+    <nav>
+      <a href="#about">About</a>
+      <a href="#outline">Outline</a>
+      <a href="#presenters">Presenters</a>
+      <a href="#materials">Materials</a>
+      <a href="#info">Audience &amp; History</a>
+      <a href="#references">References</a>
+    </nav>
   </header>
 
   <main>
-    <section class="hero">
+    <section id="about" class="hero">
       <h2>About the Tutorial</h2>
       <p>
         Despite rapid progress in machine learning, <strong>real-time, online inference
@@ -276,7 +322,7 @@
       </div>
     </section>
 
-    <section class="section">
+    <section id="outline" class="section">
       <h2>Detailed Outline</h2>
       <div class="card">
         <ol>
@@ -319,13 +365,13 @@
       </div>
     </section>
 
-    <section class="section">
+    <section id="presenters" class="section">
       <h2>Presenters</h2>
       <div class="card">
         <div class="presenter">
           <div class="presenter-name">Sarah Keren</div>
           <div class="presenter-affil">
-            Assistant Professor, Faculty of Computer Science, Technion – Israel Institute of Technology
+            Senior Lecturer, Faculty of Computer Science, Technion – Israel Institute of Technology
           </div>
           <div class="presenter-email">
             Contact: <a href="mailto:sarahk@technion.ac.il">sarahk@technion.ac.il</a>
@@ -377,9 +423,72 @@
         </div>
       </div>
     </section>
-  
 
-    <section class="section">
+    <section id="materials" class="section">
+      <h2>Materials</h2>
+      <div class="card">
+        <p>
+          We will make tutorial materials available here for participants before
+          and after the event.
+        </p>
+        <ul>
+          <li>AAAI-26 PAIR Tutorial Proposal (PDF)</li>
+          <li>Slides (to be posted closer to the tutorial date)</li>
+          <li>Example domains and code snippets (links TBA)</li>
+        </ul>
+
+        <!-- Link to your uploaded PDF in the repo -->
+        <a
+          class="btn-primary"
+          href="materials/PAIR_Tutorial_proposal_AAAI_2026.pdf"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Download proposal (PDF)
+        </a>
+
+        <!-- You can add more buttons later, for example:
+        <a class="btn-primary" href="materials/PAIR_AAAI26_slides.pdf" style="margin-left:0.4rem;">
+          Download slides
+        </a>
+        -->
+      </div>
+    </section>
+
+    <section id="info" class="section two-column">
+      <div>
+        <h2>History &amp; Expected Audience</h2>
+        <div class="card">
+          <p>
+            This tutorial was previously presented at AAAI-19, where it attracted
+            approximately 60 participants. For AAAI-26, we anticipate
+            <strong>50–70 participants</strong>, including researchers and
+            students from planning, machine learning, human–robot interaction,
+            and multi-agent systems.
+          </p>
+          <p>
+            The AAAI-26 edition is updated and expanded with material from our
+            co-authored book and recent advances in plan and goal recognition.
+          </p>
+        </div>
+      </div>
+      <div>
+        <h2>Supplementary Materials</h2>
+        <div class="card">
+          <ul>
+            <li>Slides from previous PAIR tutorials</li>
+            <li>Survey papers on plan, activity, intent, and goal recognition</li>
+            <li>Links to relevant toolkits and software</li>
+            <li>
+              Chapters from <em>Introduction to Symbolic Plan and Goal
+              Recognition</em> (Mirsky, Keren, &amp; Geib, 2021)
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section id="references" class="section">
       <h2>References</h2>
       <div class="card">
         <ul>
