--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       color: var(--text);
       line-height: 1.6;
     }
+
+    /* Header + nav */
     header {
       background: white;
       border-bottom: 1px solid #dee2e6;
@@ -57,7 +59,6 @@
       color: var(--muted);
       white-space: nowrap;
     }
-    /* Simple top nav */
     nav {
       margin-top: 0.4rem;
       border-top: 1px solid #f1f3f5;
@@ -78,11 +79,49 @@
       border-bottom-color: var(--accent-light);
     }
 
+    /* Layout */
     main {
       max-width: 960px;
       margin: 1.5rem auto 3rem;
       padding: 0 1rem;
     }
+    .section {
+      margin-bottom: 2rem;
+    }
+    .section h2 {
+      font-size: 1.2rem;
+      border-bottom: 2px solid var(--accent-light);
+      padding-bottom: 0.35rem;
+      margin-bottom: 0.75rem;
+    }
+    .two-column {
+      display: grid;
+      gap: 1.5rem;
+    }
+    @media (min-width: 800px) {
+      .two-column {
+        grid-template-columns: 2fr 1.5fr;
+      }
+    }
+
+    /* Banner */
+    #banner {
+      text-align: center;
+      margin: 1rem 0 1.5rem;
+    }
+    #banner img {
+      width: 100%;
+      max-width: 1200px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.12);
+      transition: transform 0.25s ease, box-shadow 0.25s ease;
+    }
+    #banner img:hover {
+      transform: scale(1.015);
+      box-shadow: 0 8px 18px rgba(0,0,0,0.18);
+    }
+
+    /* Hero card */
     .hero {
       background: white;
       border-radius: 0.75rem;
@@ -104,6 +143,11 @@
       margin-top: 1rem;
       font-size: 0.95rem;
     }
+    @media (min-width: 800px) {
+      .meta-grid {
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+      }
+    }
     .meta-label {
       font-weight: 600;
       color: var(--muted);
@@ -111,42 +155,60 @@
       text-transform: uppercase;
       letter-spacing: 0.04em;
     }
-    .section {
-      margin-bottom: 2rem;
-    }
-    .section h2 {
-      font-size: 1.2rem;
-      border-bottom: 2px solid var(--accent-light);
-      padding-bottom: 0.35rem;
-      margin-bottom: 0.75rem;
-    }
-    .two-column {
-      display: grid;
-      gap: 1.5rem;
-    }
-    @media (min-width: 800px) {
-      .meta-grid {
-        grid-template-columns: repeat(3, minmax(0, 1fr));
-      }
-      .two-column {
-        grid-template-columns: 2fr 1.5fr;
-      }
-    }
-    ul, ol {
-      padding-left: 1.15rem;
-      margin-top: 0.2rem;
-    }
+
+    /* Cards, lists, pills */
     .card {
       background: white;
       border-radius: 0.75rem;
       padding: 1.1rem 1.25rem;
       border: 1px solid #e9ecef;
     }
-    .presenter {
-      margin-bottom: 1rem;
+    ul, ol {
+      padding-left: 1.15rem;
+      margin-top: 0.2rem;
     }
-    .presenter:last-child {
-      margin-bottom: 0;
+    .tagline {
+      font-style: italic;
+      color: var(--muted);
+      margin-top: 0.4rem;
+    }
+    .pill {
+      display: inline-block;
+      background: var(--accent-light);
+      color: var(--accent);
+      padding: 0.25rem 0.6rem;
+      font-size: 0.8rem;
+      border-radius: 999px;
+      font-weight: 500;
+      margin: 0.1rem;
+    }
+
+    /* Presenters */
+    .presenters-grid {
+      display: grid;
+      gap: 1.2rem;
+    }
+    @media (min-width: 720px) {
+      .presenters-grid {
+        grid-template-columns: 1fr 1fr;
+      }
+    }
+    .presenter-card {
+      display: grid;
+      grid-template-columns: auto 1fr;
+      gap: 0.9rem;
+      align-items: flex-start;
+      padding: 0.9rem;
+      border-radius: 0.75rem;
+      border: 1px solid #e9ecef;
+      background: #ffffff;
+    }
+    .presenter-photo {
+      width: 90px;
+      height: 90px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 2px solid #e9ecef;
     }
     .presenter-name {
       font-weight: 600;
@@ -164,21 +226,18 @@
     .presenter-email a:hover {
       text-decoration: underline;
     }
-    .tagline {
-      font-style: italic;
-      color: var(--muted);
-      margin-top: 0.4rem;
+    @media (max-width: 480px) {
+      .presenter-card {
+        grid-template-columns: 1fr;
+        text-align: left;
+      }
+      .presenter-photo {
+        width: 80px;
+        height: 80px;
+      }
     }
-    .pill {
-      display: inline-block;
-      background: var(--accent-light);
-      color: var(--accent);
-      padding: 0.25rem 0.6rem;
-      font-size: 0.8rem;
-      border-radius: 999px;
-      font-weight: 500;
-      margin: 0.1rem;
-    }
+
+    /* Buttons */
     .btn-primary {
       display: inline-block;
       margin-top: 0.6rem;
@@ -194,18 +253,20 @@
       background: #0a6373;
       text-decoration: none;
     }
-    footer {
-      text-align: center;
-      font-size: 0.8rem;
-      color: var(--muted);
-      padding: 1.5rem 1rem 2rem;
-    }
+
+    /* Links & footer */
     a {
       color: var(--accent);
       text-decoration: none;
     }
     a:hover {
       text-decoration: underline;
+    }
+    footer {
+      text-align: center;
+      font-size: 0.8rem;
+      color: var(--muted);
+      padding: 1.5rem 1rem 2rem;
     }
   </style>
 </head>
@@ -222,16 +283,24 @@
       <span class="badge">Singapore EXPO</span>
     </div>
 
-    <!-- Simple "tabs" as top nav -->
     <nav>
       <a href="#about">About</a>
       <a href="#outline">Outline</a>
+      <a href="#schedule">Schedule</a>
       <a href="#presenters">Presenters</a>
       <a href="#materials">Materials</a>
       <a href="#info">Audience &amp; History</a>
       <a href="#references">References</a>
     </nav>
   </header>
+
+  <!-- Banner graphic -->
+  <section id="banner">
+    <img
+      src="images/pair-banner.jpg"
+      alt="PAIR Tutorial AAAI-26 Banner"
+    />
+  </section>
 
   <main>
     <section id="about" class="hero">
@@ -365,62 +434,113 @@
       </div>
     </section>
 
+    <section id="schedule" class="section">
+      <h2>Schedule Breakdown</h2>
+      <div class="card">
+        <p>
+          The tutorial is scheduled for <strong>Tuesday, January 20, 8:30am–12:30pm</strong>
+          at the Singapore EXPO Convention &amp; Exhibition Centre.
+        </p>
+
+        <ul>
+          <li><strong>08:30 – 08:40</strong> &nbsp;Welcome, logistics, and motivation</li>
+          <li><strong>08:40 – 09:20</strong> &nbsp;Introduction to plan, activity, intent, and goal recognition</li>
+          <li><strong>09:20 – 10:00</strong> &nbsp;Formal problem definitions and core representations</li>
+          <li><strong>10:00 – 10:30</strong> &nbsp;Break</li>
+          <li><strong>10:30 – 11:10</strong> &nbsp;Algorithms and inference methods (online &amp; offline)</li>
+          <li><strong>11:10 – 11:50</strong> &nbsp;Applications, evaluation, and benchmarks</li>
+          <li><strong>11:50 – 12:30</strong> &nbsp;Open challenges, discussion, and Q&amp;A</li>
+        </ul>
+
+        <p style="font-size:0.9rem; color:#6c757d; margin-top:0.6rem;">
+          Times are approximate and may be adjusted slightly during the tutorial
+          to allow for questions and discussion.
+        </p>
+      </div>
+    </section>
+
     <section id="presenters" class="section">
       <h2>Presenters</h2>
-      <div class="card">
-        <div class="presenter">
-          <div class="presenter-name">Sarah Keren</div>
-          <div class="presenter-affil">
-            Senior Lecturer, Faculty of Computer Science, Technion – Israel Institute of Technology
+      <div class="presenters-grid">
+
+        <!-- Sarah -->
+        <div class="presenter-card">
+          <img
+            src="images/sarah-keren.jpg"
+            alt="Sarah Keren"
+            class="presenter-photo"
+          />
+          <div>
+            <div class="presenter-name">Sarah Keren</div>
+            <div class="presenter-affil">
+              Senior Lecturer, Faculty of Computer Science, Technion – Israel Institute of Technology
+            </div>
+            <div class="presenter-email">
+              Contact: <a href="mailto:sarahk@technion.ac.il">sarahk@technion.ac.il</a>
+            </div>
+            <p>
+              Sarah’s research focuses on multi-agent environment design: creating
+              environments that enhance agent capabilities and enable effective
+              multi-robot and human–robot collaboration. She combines model-based
+              reasoning, decision-making under uncertainty, game theory, and
+              multi-agent learning. Her doctoral work introduced
+              <em>Goal Recognition Design</em>, a framework for improving goal
+              inference via environment redesign.
+            </p>
           </div>
-          <div class="presenter-email">
-            Contact: <a href="mailto:sarahk@technion.ac.il">sarahk@technion.ac.il</a>
-          </div>
-          <p>
-            Sarah’s research focuses on multi-agent environment design: creating
-            environments that enhance agent capabilities and enable effective
-            multi-robot and human–robot collaboration. She combines model-based
-            reasoning, decision-making under uncertainty, game theory, and
-            multi-agent learning. Her doctoral work introduced
-            <em>Goal Recognition Design</em>, a framework for improving goal
-            inference via environment redesign.
-          </p>
         </div>
 
-        <div class="presenter">
-          <div class="presenter-name">Reuth Mirsky</div>
-          <div class="presenter-affil">
-            Assistant Professor, Computer Science Department, Tufts University
+        <!-- Reuth -->
+        <div class="presenter-card">
+          <img
+            src="images/reuth-mirsky.jpg"
+            alt="Reuth Mirsky"
+            class="presenter-photo"
+          />
+          <div>
+            <div class="presenter-name">Reuth Mirsky</div>
+            <div class="presenter-affil">
+              Assistant Professor, Computer Science Department, Tufts University
+            </div>
+            <div class="presenter-email">
+              Contact:
+              <a href="mailto:reuth.mirsky@tufts.edu">reuth.mirsky@tufts.edu</a>
+            </div>
+            <p>
+              Reuth leads the GOLD (goal optimization using learning and
+              decision-making) lab. Her work develops algorithms and frameworks
+              that challenge traditional assumptions about intelligent agents. She
+              is an active contributor to the AI and HRI communities and has
+              co-organized more than 15 events on related topics at major AI
+              conferences, including the PAIR and RaD-AI workshop series.
+            </p>
           </div>
-          <div class="presenter-email">
-            Contact:
-            <a href="mailto:reuth.mirsky@tufts.edu">reuth.mirsky@tufts.edu</a>
-          </div>
-          <p>
-            Reuth leads the GOLD (goal optimization using learning and
-            decision-making) lab. Her work develops algorithms and frameworks
-            that challenge traditional assumptions about intelligent agents. She
-            is an active contributor to the AI and HRI communities and has
-            co-organized more than 15 events on related topics at major AI
-            conferences, including the PAIR and RaD-AI workshop series.
-          </p>
         </div>
 
-        <div class="presenter">
-          <div class="presenter-name">Christopher Geib</div>
-          <div class="presenter-affil">
-            Principal Scientist, Charles River Analytics
+        <!-- Chris -->
+        <div class="presenter-card">
+          <img
+            src="images/christopher-geib.jpg"
+            alt="Christopher Geib"
+            class="presenter-photo"
+          />
+          <div>
+            <div class="presenter-name">Christopher Geib</div>
+            <div class="presenter-affil">
+              Principal Scientist, Charles River Analytics
+            </div>
+            <div class="presenter-email">
+              Contact: <a href="mailto:cwgeib@gmail.com">cwgeib@gmail.com</a>
+            </div>
+            <p>
+              Chris is the principal architect of multiple probabilistic plan
+              recognition systems, including the ELEXIR system, which demonstrates
+              state-of-the-art plan recognition and planning capabilities using a
+              single, shared, and learnable domain representation.
+            </p>
           </div>
-          <div class="presenter-email">
-            Contact: <a href="mailto:cwgeib@gmail.com">cwgeib@gmail.com</a>
-          </div>
-          <p>
-            Chris is the principal architect of multiple probabilistic plan
-            recognition systems, including the ELEXIR system, which demonstrates
-            state-of-the-art plan recognition and planning capabilities using a
-            single, shared, and learnable domain representation.
-          </p>
         </div>
+
       </div>
     </section>
 
@@ -433,11 +553,11 @@
         </p>
         <ul>
           <li>AAAI-26 PAIR Tutorial Proposal (PDF)</li>
-          <li>Slides (to be posted closer to the tutorial date)</li>
+          <li>Slides from the AAAI-26 PAIR Tutorial</li>
           <li>Example domains and code snippets (links TBA)</li>
         </ul>
 
-        <!-- Link to your uploaded PDF in the repo -->
+        <!-- Download proposal button -->
         <a
           class="btn-primary"
           href="materials/PAIR_Tutorial_proposal_AAAI_2026.pdf"
@@ -447,11 +567,16 @@
           Download proposal (PDF)
         </a>
 
-        <!-- You can add more buttons later, for example:
-        <a class="btn-primary" href="materials/PAIR_AAAI26_slides.pdf" style="margin-left:0.4rem;">
-          Download slides
+        <!-- Slides button -->
+        <a
+          class="btn-primary"
+          href="materials/PAIR_AAAI26_slides.pdf"
+          target="_blank"
+          rel="noopener noreferrer"
+          style="margin-left:0.4rem;"
+        >
+          Download slides (PDF)
         </a>
-        -->
       </div>
     </section>
 
