Update schedule timings in index.html

--- a/index.html
+++ b/index.html
@@ -446,8 +446,8 @@
           <li><strong>08:40 – 09:20</strong> &nbsp;Introduction to plan, activity, intent, and goal recognition</li>
           <li><strong>09:20 – 10:00</strong> &nbsp;Formal problem definitions and core representations</li>
           <li><strong>10:00 – 10:30</strong> &nbsp;Break</li>
-          <li><strong>10:30 – 11:10</strong> &nbsp;Algorithms and inference methods (online &amp; offline)</li>
-          <li><strong>11:10 – 11:50</strong> &nbsp;Applications, evaluation, and benchmarks</li>
+          <li><strong>10:30 – 11:50</strong> &nbsp;Algorithms and inference methods</li>
+          <li><strong>11:50 – 11:50</strong> &nbsp;Hands-on demo</li>
           <li><strong>11:50 – 12:30</strong> &nbsp;Open challenges, discussion, and Q&amp;A</li>
         </ul>
 
