Add tutorial slides link to materials section
Added a link to tutorial slides for participants.

--- a/index.html
+++ b/index.html
@@ -546,10 +546,12 @@
     <section id="materials" class="section">
       <h2>Materials</h2>
       <div class="card">
-        <p>
-          We will make tutorial materials available here for participants before
-          and after the event.
-        </p>
+         <li>
+        <a href="materials/PAIR_AAAI26_slides.pdf" target="_blank">
+          Tutorial Slides (PDF)
+        </a>
+      </li>
+      
         <!--<ul>
           <li>AAAI-26 PAIR Tutorial Proposal (PDF)</li>
           <li>Slides from the AAAI-26 PAIR Tutorial</li>
